--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-
+    <!-- All future scripts will all be linked here, so just remember to comment out the ones you don't need at the moment -->
     <script src="./scripts/variables.js"></script>
+    <script src="./scripts/numbers.js"></script>
 </body>
 
 </html>
