--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- All future scripts will all be linked here, so just remember to comment out the ones you don't need at the moment -->
     <script src="./scripts/variables.js"></script>
     <script src="./scripts/numbers.js"></script>
+    <script src="./scripts/strings.js"></script>
 </body>
 
 </html>
